<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2007-2008 Esmertec AG.
 * Copyright (C) 2007-2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="pref_key_root">
    <!-- SMS Settings -->
    <PreferenceCategory android:title="@string/pref_sms_settings_title"
                        android:key="pref_key_sms_settings" >
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_sms_delivery_reports"
                android:summary="@string/pref_summary_sms_delivery_reports"
                android:title="@string/pref_title_sms_delivery_reports" />

        <ListPreference
                android:defaultValue="-1"
                android:dialogTitle="@string/pref_title_sms_validity_period"
                android:entries="@array/entries_sms_validity_period"
                android:entryValues="@array/entries_sms_validity_period_value"
                android:key="pref_key_sms_validity_period"
                android:title="@string/pref_title_sms_validity_period" />

        <Preference
                android:key="pref_key_manage_sim_messages"
                android:summary="@string/pref_summary_manage_sim_messages"
                android:title="@string/pref_title_manage_sim_messages" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_mms_settings_title"
                android:key="pref_key_mms_settings">

        <CheckBoxPreference android:defaultValue="false"
                android:key="pref_key_mms_delivery_reports"
                android:summary="@string/pref_summary_mms_delivery_reports"
                android:title="@string/pref_title_mms_delivery_reports" />

        <ListPreference android:key="pref_key_mms_expiry"
                android:title="@string/pref_title_mms_save_time"
                android:dialogTitle="@string/pref_title_mms_save_time"
                android:entries="@array/save_time"
                android:entryValues="@array/save_time_values"
                android:defaultValue="0"
                android:summary="@string/save_description" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_smsc_title"
            android:key="pref_key_smsc_category">
        <Preference android:key="pref_key_smsc_number"
                android:title="@string/pref_smsc_number"/>
    </PreferenceCategory>
</PreferenceScreen>
