<?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (c) 2014 pci-suntektech Technologies, Inc.  All Rights Reserved.
 * pci-suntektech Technologies Proprietary and Confidential.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to
 * deal in the Software without restriction, including without limitation the
 * rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
 * sell copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
 * IN THE SOFTWARE.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/search"
          android:title="@string/menu_search"
          android:icon="@drawable/ic_menu_search_white"
          android:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:title="@string/menu_preferences"
        android:icon="@android:drawable/ic_menu_preferences" />

    <item android:id="@+id/action_change_to_folder_mode"
        android:title="@string/change_to_folder_mode"/>

    <item android:id="@+id/action_change_to_conversation_mode"
        android:title="@string/change_to_conversation_mode"/>

    <item android:id="@+id/action_memory_status"
        android:title="@string/memory_status_title"/>

    <item android:id="@+id/action_delete_all"
        android:title="@string/menu_delete_all"
        android:icon="@drawable/ic_menu_delete" />

    <item android:id="@+id/action_cell_broadcasts"
        android:title="@string/menu_cell_broadcasts" />

    <item android:id="@+id/action_debug_dump"
        android:title="@string/menu_debug_dump" />

    <item android:id="@+id/my_favorited"
        android:title="@string/my_favorited" />

    <item android:id="@+id/saveorbackmessage"
        android:title="@string/save_back_message" />
</menu>
