<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2014, The Linux Foundation. All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are
met:

    * Redistributions of source code must retain the above copyright
      notice, this list of conditions and the following disclaimer.
    * Redistributions in binary form must reproduce the above
      copyright notice, this list of conditions and the following
      disclaimer in the documentation and/or other materials provided
      with the distribution.
    * Neither the name of The Linux Foundation nor the names of its
      contributors may be used to endorse or promote products derived
      from this software without specific prior written permission.

THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED
WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT
ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/forward"
        android:icon="@drawable/ic_forward"
        android:showAsAction="always|withText"
        android:title="@string/menu_forward"/>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_menu_delete"
        android:showAsAction="always|withText"
        android:title="@string/delete"/>
    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_menu_copy"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_copy_to"/>
    <item
        android:id="@+id/lock"
        android:showAsAction="never|withText"
        android:title="@string/menu_lock"/>
    <item
        android:id="@+id/copy_to_sim"
        android:showAsAction="never|withText"
        android:title="@string/operation_to_card_memory"/>
    <item
        android:id="@+id/detail"
        android:showAsAction="never|withText"
        android:title="@string/message_detail"/>
    <item
        android:id="@+id/share"
        android:showAsAction="never|withText"
        android:title="@string/message_share"/>
    <item
        android:id="@+id/report"
        android:showAsAction="never|withText"
        android:title="@string/view_delivery_report"/>
    <item
        android:id="@+id/save_attachment"
        android:showAsAction="never|withText"
        android:title="@string/copy_to_sdcard"/>
    <item
        android:id="@+id/selection_toggle"
        android:showAsAction="never|withText"
        android:title="@string/selected_all" />
</menu>
