<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2008 Esmertec AG.
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:orientation="vertical"
        android:background="@color/mms_next_theme_color"
        android:elevation="@dimen/action_bar_elevation"
        android:theme="@style/HeaderTheme">

        <Toolbar
            android:id="@+id/toolbar"
            android:padding="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ViewStub android:id="@+id/recipients_editor_stub"
                android:layout="@layout/recipients_editor"
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"/>

        </Toolbar>

        <LinearLayout
            android:id="@+id/recipients_subject_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/subject_wrapper"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility="gone">

                <EditText android:id="@+id/subject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:capitalize="sentences"
                    android:autoText="true"
                    android:singleLine="true"
                    android:hint="@string/subject_hint"/>

                <ImageView
                    android:id="@+id/subject_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="4dp"
                    android:src="@drawable/ic_navigation_close"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/remove_subject" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <view class="com.android.mms.ui.MessageListView"
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0"
            android:transcriptMode="disabled"
            android:smoothScrollbar="false"
            android:stackFromBottom="true"
            android:visibility="gone"
            android:fadingEdge="none"
            android:layout_marginBottom="1dip"
            android:cacheColorHint="@android:color/white"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:scrollbarStyle="outsideOverlay"
            android:paddingBottom="@dimen/input_text_height_adjusted"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <view class="com.android.mms.ui.AttachmentEditor"
              android:id="@+id/attachment_editor"
              android:layout_marginStart="42dp"
              android:layout_weight="1.0"
              android:layout_width="match_parent"
              android:layout_height="0dip" />

            <LinearLayout
                android:id="@+id/bottom_panel"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/text_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/compose_message_normal_text_size"
                    android:alpha="0.5"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="16dp"
                    android:gravity="bottom">

                    <ImageButton
                        android:id="@+id/add_attachment"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/add_attachment"
                        android:background="?android:selectableItemBackground"
                        android:tint="#A8ABAB"/>

                    <EditText
                        android:textColor="@color/compose_message_text_color"
                        android:id="@+id/embedded_text_editor"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:autoText="true"
                        android:textSize="16sp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="5dp"
                        android:capitalize="sentences"
                        android:nextFocusRight="@+id/send_button"
                        android:hint="@string/compose_message_hint_text"
                        android:minHeight="@dimen/input_text_height"
                        android:maxLines="3"
                        android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
                        android:imeOptions="actionSend|flagNoEnterAction"
                        android:background="@drawable/compose_msg"
                        android:backgroundTint="@color/outgoing_message_bg" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="15dp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/mms_marker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/compose_message_normal_text_size"
                            android:alpha="0.5"
                            android:editable="false"
                            android:text="@string/mms"
                            android:contentDescription="@string/send_mms"
                            android:nextFocusLeft="@+id/embedded_text_editor"/>

                        <com.android.mms.widget.FluctuatingImageButton
                            android:id="@+id/send_button"
                            style="?android:attr/borderlessButtonStyle"
                            android:background="@drawable/generic_contact_picture"
                            android:drawablePadding="0dip"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginBottom="4dp"
                            android:contentDescription="@string/send"
                            android:nextFocusLeft="@+id/embedded_text_editor" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
